css/styles.css
/*****************************************Start of Symbols*******************************/
			.whiteBorder{
				border-color: #f5f6fa !important;
			}
			
			.blackBorder{
				border-color: black !important;
			}
			
			.silverBorder{
				border-color: silver !important;
			}
			
			.goldBorder{
				border-color: gold !important;
			}
			
			.noBorder{
				border-color: transparent;
			}
			
			
			.chaosSymbol{
				background-image:url("../symbols/chaos.svg");
				background-size: cover;
				height:15px;
				width:18px;
				display: inline-block;
			}
			
			.tapSymbol{
				background-image:url("../symbols/T.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.untapSymbol{
				background-image:url("../symbols/Q.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.xMana{
				background-image:url("../symbols/X.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.yMana{
				background-image:url("../symbols/Y.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.zMana{
				background-image:url("../symbols/Z.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.infiniteMana{
				background-image:url("../symbols/Infinite.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.whiteMana{
				background-image:url("../symbols/W.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blueMana{
				background-image:url("../symbols/U.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blackMana{
				background-image:url("../symbols/B.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			.redMana{
				background-image:url("../symbols/R.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.greenMana{
				background-image:url("../symbols/G.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.snowMana{
				background-image:url("../symbols/s.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.energy{
				background-image:url("../symbols/e.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.colourlessMana{
				background-image:url("../symbols/C.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.hwhiteMana{
				background-image:url("../symbols/hW.svg");
				background-size: 8px;
				height:15px;
				width:7.5px;
				display: inline-block;
			}
			
			.hblueMana{
				background-image:url("../symbols/hU.svg");
				background-size: 8px;
				height:15px;
				width:7.5px;
				display: inline-block;
			}
			
			.hblackMana{
				background-image:url("../symbols/hB.svg");
				background-size: 8px;
				height:15px;
				width:7.5px;
				display: inline-block;
			}
			.hredMana{
				background-image:url("../symbols/hR.svg");
				background-size: 8px;
				height:15px;
				width:7.5px;
				display: inline-block;
			}
			
			.hgreenMana{
				background-image:url("../symbols/hG.svg");
				background-size: 8px;
				height:15px;
				width:7.5px;
				display: inline-block;
			}
			
			.hcolourlessMana{
				background-image:url("../symbols/hC.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.whiteblueMana{
				background-image:url("../symbols/WU.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.whiteblackMana{
				background-image:url("../symbols/WB.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blueblackMana{
				background-image:url("../symbols/UB.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blueredMana{
				background-image:url("../symbols/UR.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blackgreenMana{
				background-image:url("../symbols/BG.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blackredMana{
				background-image:url("../symbols/BR.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.redgreenMana{
				background-image:url("../symbols/RG.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.redwhiteMana{
				background-image:url("../symbols/RW.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.greenwhiteMana{
				background-image:url("../symbols/GW.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.greenblueMana{
				background-image:url("../symbols/GU.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.whitepMana{
				background-image:url("../symbols/WP.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.bluepMana{
				background-image:url("../symbols/UP.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.blackpMana{
				background-image:url("../symbols/BP.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
			
			.redpMana{
				background-image:url("../symbols/RP.svg");
				background-size: 15px;
				height:15px;
				width:15px;
				display: inline-block;
			}
/* ... */

